@@ -4,6 +4,9 @@ Unreleased
 - Fixed problem with header filters not working properly with non-ASCII
   characters in headers.  (LP #777455)
 
+- Fixed bug in regular expression body filter which improperly parsed the
+  'Content-Type' header in order to extract the character set of a Mime part.
+
 0.12 (2011-04-25)
 -----------------
 
